add_library(
	kitik-utils
	KitikUtility/DSP/overSampleGain.h
	KitikUtility/DSP/overSampleGain.cpp
	KitikUtility/GUI/dragToDawButton.h
	KitikUtility/GUI/LookAndFeel.h
	KitikUtility/GUI/LookAndFeel.cpp
	KitikUtility/GUI/PresetManager.h
	KitikUtility/GUI/PresetManager.cpp
	KitikUtility/GUI/PresetPanel.h
	KitikUtility/GUI/PresetPanel.cpp
	KitikUtility/GUI/RotarySliderWithLabels.h
	KitikUtility/GUI/RotarySliderWithLabels.cpp
	KitikUtility/GUI/SliderWithLabels.h
	KitikUtility/GUI/SliderWithLabels.cpp
	KitikUtility/GUI/Toolbar.h
	KitikUtility/GUI/Toolbar.cpp
	KitikUtility/Utility/AsyncUpdater.h
	KitikUtility/Utility/BrowserComponent.h
	KitikUtility/DSP.h
	KitikUtility/GUI.h
	KitikUtility/Utility.h
	KitikUtilityHeader.h )